<resources>
    <string name="app_name">CleanHouse</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Toza va sog\'lom muhit yaratamiz</string>

    <string name="ok" translatable="false">Ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failure_to_connect">Server bilan ulanishda xatolik yuz berdi</string>
    <string name="russian" translatable="false">Русский язык</string>
    <string name="uzb_cyrillic" translatable="false">Ўзбек тили</string>
    <string name="uzb" translatable="false">O\'zbek tili</string>
    <string name="change_language">Til o\'zgartirish</string>
    <string name="assignment">Topshiriqlar</string>
    <string name="accepted">Qabul qilindi</string>
    <string name="done">Bajarildi</string>
    <string name="in_progress">Jarayonda</string>
    <string name="returned_for_inspection">Tekshiruvga qaytarilgan</string>
    <string name="report">Topshiriqlar xisoboti</string>
    <string name="report_description">Siz ushbu bo\'limda yakunlangan, jarayonda, vaqtincha to\'xtatilgan va qabul qilinmagan topshiriqlar haqida ma\'lumot olasiz</string>
    <string name="List_of_employees">Hodimlar ro’yxati</string>
    <string name="count">Soni</string>
    <string name="score">Bal</string>
    <string name="degree">Daraja</string>
    <string name="current_password">Joriy parol</string>
    <string name="new_password">Yangi parol</string>
    <string name="confirm_password">Paroni tasdiqlash</string>
    <string name="language">Dastur tili</string>
    <string name="menu_settings">Sozlamalar</string>
    <string name="settings_language">Dastur tili</string>
    <string name="current_lang">O\'zbek tili</string>
    <string name="input_login_please">Iltimos, loginingizni kiriting</string>
    <string name="input_password_please">Iltimos, parolingizni kiriting</string>
    <string name="cycrilic_error">Parol lotin harflar yoki sonlardan tashkil topgan bo\'lishi kerak</string>
    <string name="sign_in_btn">Kirish</string>
    <string name="create_pass_desc">Shaxsiy ma`lumotlaringizni PIN-kod bilan ximoyalash uchun quyidagi maydonlarni to`ldiring</string>
    <string name="pin_code">PIN-code</string>
    <string name="pin_code_is_required">PIN-code kiritilishi shart</string>
    <string name="pin_error">PIN-code xato kiritildi</string>
    <string name="change_pin_code">PIN-codeni o`zgartirish</string>
    <string name="new_password_cannot_be_empty">Yangi parol kiritilishi lozim</string>
    <string name="enter_confirm_password">Iltimos, tasdiqlash parolini kiriting</string>
    <string name="enter_confirm_pin_code">Iltimos, tasdiqlash PIN-code kiriting</string>
    <string name="passwords_do_not_match">Parollar mos kelmadi</string>
    <string name="pin_code_do_not_match">PIN-code mos kelmadi</string>
    <string name="change_password">Parolni o`zgartirish</string>
    <string name="are_you_sure_change">Haqiqatan ham o\'zgartirishni xohlaysizmi?</string>
    <string name="cancel">Bekor qilish</string>
    <string name="Home">Asosiy</string>
    <string name="enter_the_program">Dasturga kirish</string>
    <string name="login">Login</string>
    <string name="password">Parol</string>
    <string name="confirm_pin_code">PIN-codeni tasdiqlash</string>
    <string name="current_pin_code">Joriy PIN-code</string>
    <string name="new_pin_code">Yangi PIN-code</string>
    <string name="new_pin_code_cannot_be_empty">Yangi PIN-code kiritlishi lozim</string>
    <string name="log_out">Dasturdan chiqish</string>
    <string name="tasks">Tasklar</string>
    <string name="statistics">Statistika</string>
    <string name="welcome">Shaxsiy kabinetingizga kirish uchun formani to’ldiring</string>
    <string name="forgot_password"><u>Parolingizni unutdingizmi?</u></string>
    <string name="loading">Jarayonda</string>
    <string name="completed">Yakunlangan</string>
    <string name="returned">Qaytarilgan</string>
    <string name="password_recovery">Parolni qayta tiklash</string>
    <string name="fill_out_form">Parolni tiklash uchun shaklini to\'ldiring</string>
    <string name="all">Barchasi</string>
    <string name="new_task">Yangi</string>
    <string name="pause">To\'xtatilgan</string>
    <string name="done_tasks">Tekshiruvda</string>
    <string name="accepted_tasks">Qabul qilingan</string>
    <string name="appointed">Biriktirilgan</string>
    <string name="change_status_pause">Pausaga o\'tkazish</string>
    <string name="change_status_process">Jarayonga o\'tkazish</string>
    <string name="change_status_accept">Qabul qilish</string>
    <string name="wont_log_out">Dasturdan chiqishni hohlaysizmi?</string>
    <string name="description">Tavsif</string>
    <string name="choose">Tanlang</string>
    <string name="performer_appointed">Ijrochi tayinlangan</string>
    <string name="rated">Baholangan</string>
    <string name="failed_tasks">Bajarilmagan</string>
    <string name="done_task">Bajarilgan topshiriqlar</string>
    <string name="process_task">Jarayondagi topshiriqlar</string>
    <string name="download_task">Qabul qilingan topshiriqlar</string>
    <string name="suspended">To\'xtatilgan</string>
    <string name="dayly">Kunlar hisobida</string>
    <string name="monthly">Oylar hisobida</string>
    <string name="report_tasks">Topshiriqlar hisoboti</string>
    <string name="report_projects">Loyihalar kesimida topshiriqlar</string>
    <string name="hard">Yuqori</string>
    <string name="medium">O\'rta</string>
    <string name="easy">Past</string>
    <string name="open">Open</string>
    <string name="close">Cloce</string>

</resources>