<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/textSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Profile" />

    <LinearLayout
        android:id="@+id/layoutSettingsLanguage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginStart="@dimen/margin_16"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSettingsTitle">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:orientation="vertical">
            <TextView
                android:id="@+id/app_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/change_language" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_lang" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettingsLanguage" />

    <LinearLayout
        android:id="@+id/layout_change_pin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_16"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSettingsLanguage">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/change_pin_code" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/layout_change_pin" />

    <LinearLayout
        android:id="@+id/layout_change_parol"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_16"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_change_pin">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/change_password" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/layout_change_parol" />
    <LinearLayout
        android:id="@+id/layoutLogOut"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_16"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_change_parol">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/log_out" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/layoutLogOut" />



</androidx.constraintlayout.widget.ConstraintLayout>